Finish all examples

--- a/2023-Monadic-Warsaw/ledger/ledger.cabal
+++ b/2023-Monadic-Warsaw/ledger/ledger.cabal
@@ -28,6 +28,8 @@ library
   exposed-modules:     Byron
                      , Base
                      , Core
+                     , Hash
+                     , KeyHash
                      , Mary
                      , Shelley
 
