--- a/2023-Monadic-Warsaw/ledger/ledger.cabal
+++ b/2023-Monadic-Warsaw/ledger/ledger.cabal
@@ -26,7 +26,7 @@ tested-with:         GHC == 8.0.2
 library
   hs-source-dirs:      src
   exposed-modules:     Byron
-                     , Base
+                     , Coin
                      , Core
                      , Hash
                      , KeyHash
