--- a/2023-Monadic-Warsaw/ledger/ledger.cabal
+++ b/2023-Monadic-Warsaw/ledger/ledger.cabal
@@ -26,8 +26,8 @@ tested-with:         GHC == 8.0.2
 library
   hs-source-dirs:      src
   exposed-modules:     Byron
-                     , Coin
                      , Core
+                     , Base
                      , Hash
                      , KeyHash
                      , Mary
@@ -35,7 +35,9 @@ library
 
   other-modules:
   build-depends:       base >= 4.8 && < 5
-                     , rio
+                     , bytestring
+                     , containers
+                     , microlens
 
   default-language:    Haskell2010
   ghc-options:         -Wall
